# mloodyt50-driver

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  t50_bloody7_reverse_engineering.md
src/adapters/inbound/cli/: MLDCliApplication.h  MLDCliApplication.mm
src/adapters/outbound/iokit/: MLDIOKitDeviceDiscoveryAdapter.h  MLDIOKitDeviceDiscoveryAdapter.mm  MLDIOKitFeatureTransportAdapter.h  MLDIOKitFeatureTransportAdapter.mm
src/adapters/outbound/memory/: MLDInMemoryDeviceDiscoveryAdapter.h  MLDInMemoryDeviceDiscoveryAdapter.m  MLDInMemoryFeatureTransportAdapter.h  MLDInMemoryFeatureTransportAdapter.m
src/application/ports/: MLDDeviceDiscoveryPort.h  MLDFeatureTransportPort.h
src/application/use_cases/: MLDApplyPerformanceProfileUseCase.h  MLDApplyPerformanceProfileUseCase.m  MLDDiscoverSupportedDevicesUseCase.h  MLDDiscoverSupportedDevicesUseCase.m  MLDReadFeatureReportUseCase.h  MLDReadFeatureReportUseCase.m  MLDT50ExchangeVendorCommandUseCase.h  MLDT50ExchangeVendorCommandUseCase.m  MLDWriteFeatureReportUseCase.h  MLDWriteFeatureReportUseCase.m
src/bootstrap/: main.mm
src/domain/entities/: MLDMouseDevice.h  MLDMouseDevice.m
src/domain/services/: MLDProfilePolicy.h  MLDProfilePolicy.m  MLDSupportedDeviceCatalog.h  MLDSupportedDeviceCatalog.m
src/domain/value_objects/: MLDPerformanceProfile.h  MLDPerformanceProfile.m
tests/unit/: ApplyPerformanceProfileTests.mm  DiscoverSupportedDevicesTests.mm  RawFeatureControlTests.mm  SupportedDeviceCatalogTests.mm  T50ExchangeVendorCommandTests.mm
tmp/captures/: 09DA_79EF_Capture.pcapng  core_probe_after_1.json  core_probe_after_2.json  core_probe_after_3.json  core_probe_after_4.json  core_probe_baseline.json  t50_after_color_try.json  t50_before_color_try.json  t50_capture_fragments.txt  t50_now_read_scan.json
tools/re/: bloody7_adjustgun_map.py  bloody7_fw_mcu_map.py
